# HTTPS-Server

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  README_PT.md  build.ps1  cert.pem  config.json  key.pem
public/: about.html  bench.html  error-403.html  error-404.html  error-500.html  index.html  style.css  test.html
src/: main.cpp
src/core/: config.cpp  config.hpp  event_loop.cpp  event_loop.hpp  server.cpp  server.hpp  thread_pool.hpp
src/crypto/: CMakeLists.txt  aes.hpp  aes_provider.cpp  blake3.hpp  chacha20.hpp  crypto_advanced.hpp  poly1305.hpp  sha256.hpp  x25519.hpp
src/crypto/asm/arm64/: sha256_neon.S
src/crypto/asm/x86_64/: aes_ni.asm  crypto_advanced.asm  p256_avx2.asm  sha256_avx.asm
src/http/: http.cpp  http.hpp  router.hpp  static_handler.cpp  static_handler.hpp
src/utils/: benchmark_utils.cpp  benchmark_utils.hpp  buffer.hpp  compression_suite.cpp  compression_suite.hpp  fast_memory.hpp  http_accelerated.cpp  http_accelerated.hpp  logger.cpp  logger.hpp  network_operations.cpp  network_operations.hpp  validation_engine.cpp  validation_engine.hpp
src/utils/asm/x86_64/: compression_suite.asm  http_accelerated.asm  memory_avx2.asm  network_operations.asm  validation_engine.asm
tests/perf/: benchmark_aes.cpp  benchmark_p256.cpp  benchmark_sha256.cpp
tests/unit/: test_buffer.cpp  test_crypto_aes.cpp  test_crypto_p256.cpp  test_crypto_sha256.cpp  test_fast_memory.cpp
wwwroot/: index.html
